- CHG: Updated gradle build target to Java 11.