@@ -45,7 +45,7 @@ public class Database
 		{
 			// The newInstance() call is a work around for some
 			// broken Java implementations
-			Class.forName("com.mysql.cj.jdbc.Driver").newInstance();
+			Class.forName("com.mysql.cj.jdbc.Driver").getDeclaredConstructor().newInstance();
 		}
 		catch (Exception ex)
 		{
